--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+*===========================================================================*
+* Project that generates xmlbeans used for manipulating an onyx export file
+*===========================================================================*
+
+
 *==============*
 *  IMPORTANT   *
 *==============*
@@ -11,3 +16,10 @@ mvn clean deploy
 
 The clean cycle will remove the annoying staleFlag from the target directory.
 Otherwise, the results will not be what you expected  :-)
+
+*==============*
+* PLEASE NOTE:
+*==============*
+The accompanying shell scripts (mvn-install.sh and mvn-deploy.sh) - or their bat
+equivalents - are the preferred way of generating and building the xmlbeans.
+They ensure that the licence agreement is copied into the resulting jar.
